--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
       <nav>
         <a href="#" class="nav-home">Home</a>
         <a href="#projects-anchor" class="nav-about">Projects</a>
-        <a href="#" class="nav-test">About Me</a>
+        <a href="#resume-anchor" class="nav-test">Resume</a>
         <a href="#" class="nav-test">Contact</a>
       </nav>
     </section>
-    <div class="container home" id="projects-anchor">
-      <section class="projects">
+    <div class="container home" >
+      <section class="projects" id="projects-anchor">
         <button class="arrow" onclick="window.location.href = '#top-anchor';">▲</button>
         <div class="icon-bar">
           <a href="https://twitter.com/SamirLilienfeld" class="twitter"><i class="fa fa-twitter"></i></a>  
@@ -54,6 +54,17 @@
             </p> 
             <a href="https://bw-weight-lifting-journal.github.io/Marketing-page/" class="projects-button">Explore</a>
         </div>
+
+        
+        <div class="project3">
+          <img src="img/ezgif.com-video-to-gif (4).gif" alt="Picture of Nasa Photo of the Day Project"></iframe>
+          <h1>OER-Bookr</h1>
+          <p>
+            This application was built to help educators find high-quality textbooks. I built the Web API for this app using Java and the Spring Framework. I implemented authentication using OAuth2, migrated the database to PostgreSQL, and included automated unit tests. I worked with teo other team members and we completed the project in four days. 
+          </p>
+          <a href='https://nasa-photo-of-the-day.samirlilienfeld.now.sh' class="projects-button">Explore</a>
+        </div>
+
         <div class="project2">
           <img src="img/ezgif.com-video-to-gif (1).gif" alt="GIF of Lambda Times Project" />
           <h1>Lambda Times</h1>
@@ -63,22 +74,18 @@
           <a href="https://github.com/samir-hub/Sprint-Challenge-Applied-Javascript/pull/1" class="projects-button">Explore</a>
         </div>
 
-        <div class="project3">
-            <img src="img/NPOFTD.PNG" alt="Picture of Nasa Photo of the Day Project"></iframe>
-            <h1>NASA Photo of the Day</h1>
-            <p>
-              This is a React App that fetches an image, a date and a description from the NASA Photo of the Day API. The image is updated daily. The app is styled using Semantic UI. 
-            </p>
-            <a href='https://nasa-photo-of-the-day.samirlilienfeld.now.sh' class="projects-button">Explore</a>
-          </div>
           <div class="project4">
             <img src="img/ezgif.com-video-to-gif (3).gif" alt="GIF of forLifeFitness Project"></iframe> 
             <h1>FriendsList Project</h1>
             <p>
-              This project was an exercise in utilizing authentication tokens to ensure that the user's list of friends is only rendered if the correct credentials are entered. I created this project in one afternoon. 
+              This project was an exercise in utilizing authentication tokens to ensure that the user's list of friends is only rendered if the correct credentials are entered upon login. I created this project in one afternoon. 
             </p>
             <a href="https://github.com/samir-hub/Auth-Friends/pull/1" class="projects-button">Explore</a>
           </div>
+      </section>
+      <section class="resume" id="resume-anchor">
+        <h1>Resume</h1>
+
       </section>
     </div>
     <footer>
