--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
     <section class="nav" id="top-anchor" >
       <h1>Samir Lilienfeld, Full-Stack Web Developer</h1>
       <p>I am a student and Team Lead at Lambda School studying Full-Stack Web Development with a background in Petroleum Engineering and a track record of leadership and innovation. Check out my work!</p>
-      <img src="img/about-sam.PNG" alt="Image of Samir Lilienfeld">
+      <!-- <img src="img/about-sam.PNG" alt="Image of Samir Lilienfeld"> -->
       <div class="arrow">
         <span></span>
         <span></span>
         <span></span>
       </div>
-      <nav>
+      <nav class="navigation">
         <a href="#" class="nav-home">Home</a>
         <a href="#projects-anchor" class="nav-about">Projects</a>
-        <a href="#resume-anchor" class="nav-test">Resume</a>
+        <a href="img/Samir_Lilienfeld_Resume.pdf" target="_blank" view="fit" class="nav-test">Resume</a>
         <a href="#" class="nav-test">Contact</a>
       </nav>
     </section>
@@ -46,7 +46,7 @@
         </div>
         <h1>Projects</h1>
         <div class="project1">
-          <img src="img/ezgif.com-video-to-gif.gif" alt="GIF of forLifeFitness Project"></iframe> 
+          <img src="img/forLife-Fitness-home.PNG" alt="image of forLifeFitness Project"></iframe> 
             <h1>forLife Fitness</h1>
             <p>
               This application was built to help people track their workouts. Users can create an account and input their workout data. Users can also review, update and delete this data. 
@@ -57,15 +57,15 @@
 
         
         <div class="project3">
-          <img src="img/ezgif.com-video-to-gif (4).gif" alt="Picture of Nasa Photo of the Day Project"></iframe>
+          <img src="img/OER-Bookr-home.PNG" alt="image of OER-Bookr Project"></iframe>
           <h1>OER-Bookr</h1>
           <p>
             This application was built to help educators find high-quality textbooks. I built the Web API for this app using Java and the Spring Framework. I implemented authentication using OAuth2, migrated the database to PostgreSQL, and included automated unit tests. I worked with teo other team members and we completed the project in four days. 
           </p>
-          <a href='https://nasa-photo-of-the-day.samirlilienfeld.now.sh' class="projects-button">Explore</a>
+          <a href='https://cocky-elion-e6af99.netlify.com/signup' class="projects-button">Explore</a>
         </div>
 
-        <div class="project2">
+        <!-- <div class="project2">
           <img src="img/ezgif.com-video-to-gif (1).gif" alt="GIF of Lambda Times Project" />
           <h1>Lambda Times</h1>
           <p>
@@ -81,11 +81,7 @@
               This project was an exercise in utilizing authentication tokens to ensure that the user's list of friends is only rendered if the correct credentials are entered upon login. I created this project in one afternoon. 
             </p>
             <a href="https://github.com/samir-hub/Auth-Friends/pull/1" class="projects-button">Explore</a>
-          </div>
-      </section>
-      <section class="resume" id="resume-anchor">
-        <h1>Resume</h1>
-
+          </div> -->
       </section>
     </div>
     <footer>
