added Labs and theballscreen projects

--- a/index.html
+++ b/index.html
@@ -60,28 +60,28 @@
           <img src="img/OER-Bookr-home.PNG" alt="image of OER-Bookr Project"></iframe>
           <h1>OER-Bookr</h1>
           <p>
-            This application was built to help educators find high-quality textbooks. I built the Web API for this app using Java and the Spring Framework. I implemented authentication using OAuth2, migrated the database to PostgreSQL, and included automated unit tests. I worked with teo other team members and we completed the project in four days. 
+            This application was built to help educators find high-quality textbooks. I built the Web API for this app using Java and the Spring Framework. I implemented authentication using OAuth2, migrated the database to PostgreSQL, and included automated unit tests. I worked with two other team members and we completed the project in four days. 
           </p>
           <a href='https://cocky-elion-e6af99.netlify.com/signup' class="projects-button">Explore</a>
         </div>
 
-        <!-- <div class="project2">
-          <img src="img/ezgif.com-video-to-gif (1).gif" alt="GIF of Lambda Times Project" />
-          <h1>Lambda Times</h1>
+        <div class="project2">
+          <img class="mood-bloom-img" src="img/mood_bloom.png" alt="screenshot of Mood Bloom" />
+          <h1>Mood Bloom</h1>
           <p>
-            This project demonstrates my knowledge of the DOM, JavaScript, arrays, HTTP GET requests and the axios library. The components that make up the home page are dynamic and obtained from a server. This project was created by me during a three-hour sprint. 
+            Mood Bloom is a Progressive Web App that helps users track, visualize and improve their mood. I created this app during an eight week period along with six other software engineers and two UI/UX designers. I helped implement the PWA functionality and integration with OAuth. We utilized React, Node.js, GraphQL, and OAuth.    
           </p>
           <a href="https://github.com/samir-hub/Sprint-Challenge-Applied-Javascript/pull/1" class="projects-button">Explore</a>
         </div>
 
           <div class="project4">
-            <img src="img/ezgif.com-video-to-gif (3).gif" alt="GIF of forLifeFitness Project"></iframe> 
-            <h1>FriendsList Project</h1>
+            <img src="img/theballscreen.PNG" alt="screenshot of theballscreen"></img> 
+            <h1>theballscreen</h1>
             <p>
-              This project was an exercise in utilizing authentication tokens to ensure that the user's list of friends is only rendered if the correct credentials are entered upon login. I created this project in one afternoon. 
+              This is a personal project that I am developing during my free time. It is a Progressive Web App that allows users to view a variety of NBA statistics.    
             </p>
             <a href="https://github.com/samir-hub/Auth-Friends/pull/1" class="projects-button">Explore</a>
-          </div> -->
+          </div>
       </section>
     </div>
     <footer>
