changed order of the projects. made some small changes

--- a/index.html
+++ b/index.html
@@ -38,13 +38,31 @@
       <section class="projects" id="projects-anchor">
         <button class="arrow" onclick="window.location.href = '#top-anchor';">▲</button>
         <div class="icon-bar">
-          <a href="https://twitter.com/SamirLilienfeld" class="twitter"><i class="fa fa-twitter"></i></a>  
-          <a href="https://www.linkedin.com/in/samir-hub/" class="linkedin"><i class="fa fa-linkedin"></i></a>
-          <a href="https://github.com/samir-hub" class="git-hub"><i class="fa fa-github"></i></a> 
+          <a target="_blank" href="https://www.linkedin.com/in/samir-hub/" class="linkedin"><i class="fa fa-linkedin"></i></a>
+          <a target="_blank" href="https://twitter.com/SamirLilienfeld" class="twitter"><i class="fa fa-twitter"></i></a>
+          <a target="_blank" href="https://github.com/samir-hub" class="git-hub"><i class="fa fa-github"></i></a> 
         </div>
         <div class="menu">
         </div>
         <h1>Projects</h1>
+
+        <div class="project2">
+          <img class="mood-bloom-img" src="img/mood_bloom.png" alt="screenshot of Mood Bloom" />
+          <h1>Mood Bloom</h1>
+          <p>
+            Mood Bloom is a Progressive Web App that helps users track, visualize and improve their mood. I created this app during an eight week period along with six other software engineers and two UI/UX designers. I helped implement the PWA functionality and integration with OAuth. We utilized React, Node.js, GraphQL, and OAuth.    
+          </p>
+          <a target="_blank" href="https://moodbloomapp.com" class="projects-button">Explore</a>
+        </div>
+
+          <div class="project4">
+            <img src="img/theballscreen.PNG" alt="screenshot of theballscreen"></img> 
+            <h1>theballscreen</h1>
+            <p>
+              This is a personal project that I am developing during my free time. It is a Progressive Web App that allows users to view a variety of NBA statistics. The stats update nightly and they are presented in a clean and simple manner. The user is able to save the app to their home screen and use it as a native desktop and mobile app. I used the API from <a target="_blank" class="seventh-link" href="https://theseventhman.net">theseventhman.net</a>.   
+            </p>
+            <a target="_blank" href="https://theballscreen.com" class="projects-button">Explore</a>
+          </div>
         <div class="project1">
           <img src="img/forLife-Fitness-home.PNG" alt="image of forLifeFitness Project"></iframe> 
             <h1>forLife Fitness</h1>
@@ -52,7 +70,7 @@
               This application was built to help people track their workouts. Users can create an account and input their workout data. Users can also review, update and delete this data. 
               I worked with five other team members and we completed the project in five days. I created the marketing page using HTML, CSS (LESS) and Git/GitHub.
             </p> 
-            <a href="https://bw-weight-lifting-journal.github.io/Marketing-page/" class="projects-button">Explore</a>
+            <a target="_blank" href="https://bw-weight-lifting-journal.github.io/Marketing-page/" class="projects-button">Explore</a>
         </div>
 
         
@@ -62,30 +80,14 @@
           <p>
             This application was built to help educators find high-quality textbooks. I built the Web API for this app using Java and the Spring Framework. I implemented authentication using OAuth2, migrated the database to PostgreSQL, and included automated unit tests. I worked with two other team members and we completed the project in four days. 
           </p>
-          <a href='https://cocky-elion-e6af99.netlify.com/signup' class="projects-button">Explore</a>
+          <a target="_blank" href='https://cocky-elion-e6af99.netlify.com/signup' class="projects-button">Explore</a>
         </div>
 
-        <div class="project2">
-          <img class="mood-bloom-img" src="img/mood_bloom.png" alt="screenshot of Mood Bloom" />
-          <h1>Mood Bloom</h1>
-          <p>
-            Mood Bloom is a Progressive Web App that helps users track, visualize and improve their mood. I created this app during an eight week period along with six other software engineers and two UI/UX designers. I helped implement the PWA functionality and integration with OAuth. We utilized React, Node.js, GraphQL, and OAuth.    
-          </p>
-          <a href="https://github.com/samir-hub/Sprint-Challenge-Applied-Javascript/pull/1" class="projects-button">Explore</a>
-        </div>
-
-          <div class="project4">
-            <img src="img/theballscreen.PNG" alt="screenshot of theballscreen"></img> 
-            <h1>theballscreen</h1>
-            <p>
-              This is a personal project that I am developing during my free time. It is a Progressive Web App that allows users to view a variety of NBA statistics.    
-            </p>
-            <a href="https://github.com/samir-hub/Auth-Friends/pull/1" class="projects-button">Explore</a>
-          </div>
+      
       </section>
     </div>
     <footer>
-      <p>Created by Samir Lilienfeld</p>
+      <p class="footer-text">Created by Samir Lilienfeld</p>
     </footer>
   </body>
 </html>
