--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <a href="#" class="nav-home">Home</a>
         <a href="#projects-anchor" class="nav-about">Projects</a>
         <a href="img/Samir_Lilienfeld_Resume.pdf" target="_blank" view="fit" class="nav-test">Resume</a>
-        <a href="#" class="nav-test">Contact</a>
+        <a href="#contact-anchor" class="nav-test">Contact</a>
       </nav>
     </section>
     <div class="container home" >
@@ -82,8 +82,26 @@
           </p>
           <a target="_blank" href='https://cocky-elion-e6af99.netlify.com/signup' class="projects-button">Explore</a>
         </div>
-
-      
+      </section>
+      <section class="projects" id="contact-anchor">
+        <h1>Contact</h1>
+        <div class="form-div">
+        <form class="form" name="contact" method="POST" data-netlify="true">
+            <div class="input-div">
+            <h2 class="input-title">Name</h2>
+            <input class="input" type="text" name="name" placeholder="Your name" /> 
+          </div>
+          <div class="input-div">
+            <h2 class="input-title">E-mail</h2>
+            <input class="input" type="email" name="email" placeholder="Your e-mail address" />
+          </div>
+          <div class="input-div">
+            <h2 class="input-title">Message</h2>
+            <textarea class="input textarea" name="message" placeholder="Your message"></textarea>
+          </div>
+            <button class="form-button" type="submit">Send</button>
+        </form>
+      </div>
       </section>
     </div>
     <footer>
