--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="favicon.png" />
     <title>Samir Lilienfeld</title>
 
     <link
@@ -106,6 +107,7 @@
     </div>
     <footer>
       <p class="footer-text">Created by Samir Lilienfeld</p>
+      <div><a class="footer-citation" href="https://iconscout.com/icon/computer-1478318" target="_blank">Favicon</a> by <a class="footer-citation"  href="https://iconscout.com/contributors/yesternightsupply">Pearlshell Glory</a> on <a class="footer-citation" href="https://iconscout.com">Iconscout</a></div>
     </footer>
   </body>
 </html>
