--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
   <body>
     <section class="nav" id="top-anchor" >
-      <h1 class="nav-title">Samir Lilienfeld, Full-Stack Web Developer</h1>
+      <h1 class="nav-title">Samir Lilienfeld</h1>
+      <h3 class="nav-second-title">Full-Stack Web Developer</h3>
       <p class="nav-text">I am a student and Team Lead at Lambda School studying Full-Stack Web Development with a background in Petroleum Engineering and a track record of leadership and innovation. Check out my work!</p>
       <!-- <img src="img/about-sam.PNG" alt="Image of Samir Lilienfeld"> -->
       <div class="arrow">
