WIP: main content

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
         </div>
         <div class="menu">
         </div>
-        <h1>Projects</h1>
+        <h1 class="projects-title">Projects</h1>
 
         <div class="project2">
           <img class="mood-bloom-img" src="img/mood_bloom.png" alt="screenshot of Mood Bloom" />
-          <h1>Mood Bloom</h1>
+          <h1 class="project-title">Mood Bloom</h1>
           <p>
             Mood Bloom is a Progressive Web App that helps users track, visualize and improve their mood. I created this app during an eight week period along with six other software engineers and two UI/UX designers. I helped implement the PWA functionality and integration with OAuth. We utilized React, Node.js, GraphQL, and OAuth.    
           </p>
@@ -59,7 +59,7 @@
 
           <div class="project4">
             <img src="img/theballscreen.PNG" alt="screenshot of theballscreen"></img> 
-            <h1>theballscreen</h1>
+            <h1 class="project-title">theballscreen</h1>
             <p>
               This is a personal project that I am developing during my free time. It is a Progressive Web App that allows users to view a variety of NBA statistics. The stats update nightly and they are presented in a clean and simple manner. The user is able to save the app to their home screen and use it as a native desktop and mobile app. I used the API from <a target="_blank" class="seventh-link" href="https://theseventhman.net">theseventhman.net</a>.   
             </p>
@@ -67,7 +67,7 @@
           </div>
         <div class="project1">
           <img src="img/forLife-Fitness-home.PNG" alt="image of forLifeFitness Project"></iframe> 
-            <h1>forLife Fitness</h1>
+            <h1 class="project-title">forLife Fitness</h1>
             <p>
               This application was built to help people track their workouts. Users can create an account and input their workout data. Users can also review, update and delete this data. 
               I worked with five other team members and we completed the project in five days. I created the marketing page using HTML, CSS (LESS) and Git/GitHub.
@@ -78,7 +78,7 @@
         
         <div class="project3">
           <img src="img/OER-Bookr-home.PNG" alt="image of OER-Bookr Project"></iframe>
-          <h1>OER-Bookr</h1>
+          <h1 class="project-title">OER-Bookr</h1>
           <p>
             This application was built to help educators find high-quality textbooks. I built the Web API for this app using Java and the Spring Framework. I implemented authentication using OAuth2, migrated the database to PostgreSQL, and included automated unit tests. I worked with two other team members and we completed the project in four days. 
           </p>
@@ -86,7 +86,7 @@
         </div>
       </section>
       <section class="projects" id="contact-anchor">
-        <h1>Contact</h1>
+        <h1 class="projects-title">Contact</h1>
         <div class="form-div">
         <form class="form" name="contact" method="POST" data-netlify="true">
             <div class="input-div">
