--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <a target="_blank" href='https://cocky-elion-e6af99.netlify.com/signup' class="projects-button">Explore</a>
         </div>
       </section>
-      <section class="projects" id="contact-anchor">
+      <section class="contact" id="contact-anchor">
         <h1 class="projects-title">Contact</h1>
         <div class="form-div">
         <form class="form" name="contact" method="POST" data-netlify="true">
