deleted useless files

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
       </div>
       <nav class="navigation">
         <a href="#" class="nav-home">Home</a>
-        <a href="#projects-anchor" class="nav-about">Projects</a>
-        <a href="img/Samir_Lilienfeld_Resume.pdf" target="_blank" view="fit" class="nav-test">Resume</a>
-        <a href="#contact-anchor" class="nav-test">Contact</a>
+        <a href="#projects-anchor" class="nav-home">Projects</a>
+        <a href="img/Samir_Lilienfeld_Resume.pdf" target="_blank" view="fit" class="nav-home">Resume</a>
+        <a href="#contact-anchor" class="nav-home">Contact</a>
       </nav>
     </section>
     <div class="container home" >
@@ -106,7 +106,7 @@
       </div>
       </section>
     </div>
-    <footer>
+    <footer class="footer-container">
       <p class="footer-text">Created by Samir Lilienfeld</p>
       <div><a class="footer-citation" href="https://iconscout.com/icon/computer-1478318" target="_blank">Favicon</a> by <a class="footer-citation"  href="https://iconscout.com/contributors/yesternightsupply">Pearlshell Glory</a> on <a class="footer-citation" href="https://iconscout.com">Iconscout</a></div>
     </footer>
