made arrows static due to iOS Chrome issues

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
         <span></span>
         <span></span>
       </div>
+      <div class="arrow-mobile">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
       <nav class="navigation">
         <a href="#" class="nav-home">Home</a>
         <a href="#projects-anchor" class="nav-home">Projects</a>
