fixed resume and OER link

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <nav class="navigation">
         <a href="#" class="nav-home">Home</a>
         <a href="#projects-anchor" class="nav-home">Projects</a>
-        <a href="img/Samir_Lilienfeld_Resume.pdf" target="_blank" view="fit" class="nav-home">Resume</a>
+        <a href="https://resume.creddle.io/resume/j51o687cbtv" target="_blank" view="fit" class="nav-home">Resume</a>
         <a href="#contact-anchor" class="nav-home">Contact</a>
       </nav>
     </section>
@@ -86,7 +86,7 @@
           <p>
             This application was built to help educators find high-quality textbooks. I built the Web API for this app using Java and the Spring Framework. I implemented authentication using OAuth2, migrated the database to PostgreSQL, and included automated unit tests. I worked with two other team members and we completed the project in four days. 
           </p>
-          <a target="_blank" href='https://cocky-elion-e6af99.netlify.com/signup' class="projects-button">Explore</a>
+          <a target="_blank" href='https://openeducationresources.netlify.com/signup' rel=noopener class="projects-button">Explore</a>
         </div>
       </section>
       <section class="contact" id="contact-anchor">
