added profile pic to page

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <section class="nav" id="top-anchor" >
       <h1 class="nav-title">Samir Lilienfeld</h1>
       <h3 class="nav-second-title">Full-Stack Web Developer</h3>
-      <p class="nav-text">I am a student and Team Lead at Lambda School studying Full-Stack Web Development with a background in Petroleum Engineering and a track record of leadership and innovation. Check out my work!</p>
-      <!-- <img src="img/about-sam.PNG" alt="Image of Samir Lilienfeld"> -->
+      <p class="nav-text">I am a Full-Stack Web Developer with a background in Petroleum Engineering and a track record of leadership and innovation. I'm skilled in React/Redux, Java/Spring, HTML, CSS, JavaScript, Git/GitHub, and PostgreSQL. I also have experience with Python, Django, Flask, Node.js/Express and GraphQL. Check out my work!</p>
+      <img class="nav-profilepic" src="img/about-sam.PNG" alt="Image of Samir Lilienfeld">
       <div class="arrow">
         <span></span>
         <span></span>
