made styling changes to mobile

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <body>
     <section class="nav" id="top-anchor" >
       <h1 class="nav-title">Samir Lilienfeld</h1>
-      <h3 class="nav-second-title">Full-Stack Web Developer</h3>
-      <p class="nav-text">I am a Full-Stack Web Developer with a background in Petroleum Engineering and a track record of leadership and innovation. I'm skilled in React/Redux, Java/Spring, HTML, CSS, JavaScript, Git/GitHub, and PostgreSQL. I also have experience with Python, Django, Flask, Node.js/Express and GraphQL. Check out my work!</p>
+      <h3 class="nav-second-title">Full Stack Web Developer</h3>
+      <p class="nav-text">I am a Full Stack Web Developer with a background in Petroleum Engineering and a track record of leadership and innovation. I'm skilled in <span class="nav-skills">React/Redux</span>, <span class="nav-skills">Java/Spring</span>, <span class="nav-skills">HTML</span>, <span class="nav-skills">CSS</span>, <span class="nav-skills">JavaScript</span>, <span class="nav-skills">Git/GitHub</span>, and <span class="nav-skills">PostgreSQL</span>. I also have experience with <span class="nav-skills">Python</span>, <span class="nav-skills">Django</span>, <span class="nav-skills">Flask</span>, <span class="nav-skills">Node.js/Express</span> and <span class="nav-skills">GraphQL</span>. Check out my work!</p>
       <img class="nav-profilepic" src="img/about-sam.PNG" alt="Image of Samir Lilienfeld">
       <div class="arrow">
         <span></span>
