--- a/index.html
+++ b/index.html
@@ -52,6 +52,15 @@
         </div>
         <h1 class="projects-title">Projects</h1>
 
+        <div class="project1">
+          <img src="img/my-path.PNG" alt="image of MyPath Project"></iframe> 
+            <h1 class="project-title">MyPath</h1>
+            <p>
+              MyPath is dedicated to helping young adults with financial planning. It is a personal project that I'm building during my free time. I built the front-end using React/Redux and the RESTful API using Java, the Spring Framework, and PostgreSQL. I'm currently working on adding a "Compare" feature so users can compare different paths. 
+            </p> 
+            <a target="_blank" href="https://bw-weight-lifting-journal.github.io/Marketing-page/" class="projects-button">Explore</a>
+        </div>
+
         <div class="project2">
           <img class="mood-bloom-img" src="img/mood_bloom.png" alt="screenshot of Mood Bloom" />
           <h1 class="project-title">Mood Bloom</h1>
@@ -65,19 +74,11 @@
             <img src="img/theballscreen.PNG" alt="screenshot of theballscreen"></img> 
             <h1 class="project-title">theballscreen</h1>
             <p>
-              This is a personal project that I am developing during my free time. It is a Progressive Web App that allows users to view a variety of NBA statistics. The stats update nightly and they are presented in a clean and simple manner. The user is able to save the app to their home screen and use it as a native desktop and mobile app. I used the API from <a target="_blank" class="seventh-link" href="https://theseventhman.net">theseventhman.net</a>.   
+              This is a personal project that I developed during my free time. It is a Progressive Web App that allows users to view a variety of NBA statistics. The stats update nightly and they are presented in a clean and simple manner. The user is able to save the app to their home screen and use it as a native desktop and mobile app. I used the API from <a target="_blank" class="seventh-link" href="https://theseventhman.net">theseventhman.net</a>.   
             </p>
             <a target="_blank" href="https://theballscreen.com" class="projects-button">Explore</a>
           </div>
-        <div class="project1">
-          <img src="img/forLife-Fitness-home.PNG" alt="image of forLifeFitness Project"></iframe> 
-            <h1 class="project-title">forLife Fitness</h1>
-            <p>
-              This application was built to help people track their workouts. Users can create an account and input their workout data. Users can also review, update and delete this data. 
-              I worked with five other team members and we completed the project in five days. I created the marketing page using HTML, CSS (LESS) and Git/GitHub.
-            </p> 
-            <a target="_blank" href="https://bw-weight-lifting-journal.github.io/Marketing-page/" class="projects-button">Explore</a>
-        </div>
+        
 
         
         <div class="project3">
