done adding MyPath

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <p>
               MyPath is dedicated to helping young adults with financial planning. It is a personal project that I'm building during my free time. I built the front-end using React/Redux and the RESTful API using Java, the Spring Framework, and PostgreSQL. I'm currently working on adding a "Compare" feature so users can compare different paths. 
             </p> 
-            <a target="_blank" href="https://bw-weight-lifting-journal.github.io/Marketing-page/" class="projects-button">Explore</a>
+            <a target="_blank" href="https://mypath.netlify.com" class="projects-button">Explore</a>
         </div>
 
         <div class="project2">
