edited ballscreen and Mood Bloom links

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <p>
             Mood Bloom is a Progressive Web App that helps users track, visualize and improve their mood. I created this app during an eight week period along with six other software engineers and two UI/UX designers. I helped implement the PWA functionality and integration with OAuth. We utilized React, Node.js, GraphQL, and OAuth.    
           </p>
-          <a target="_blank" href="https://moodbloomapp.com" class="projects-button">Explore</a>
+          <a target="_blank" href="https://github.com/Lambda-School-Labs/ema-therapy-fe" class="projects-button">Explore</a>
         </div>
 
           <div class="project4">
@@ -76,7 +76,7 @@
             <p>
               This is a personal project that I developed during my free time. It is a Progressive Web App that allows users to view a variety of NBA statistics. The stats update nightly and they are presented in a clean and simple manner. The user is able to save the app to their home screen and use it as a native desktop and mobile app. I used the API from <a target="_blank" class="seventh-link" href="https://theseventhman.net">theseventhman.net</a>.   
             </p>
-            <a target="_blank" href="https://theballscreen.com" class="projects-button">Explore</a>
+            <a target="_blank" href="https://github.com/samir-hub/basketball-app" class="projects-button">Explore</a>
           </div>
         
 
